# pass-nm-agent

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: b64url.rs  cli.rs  error.rs  main.rs  minipass.rs  model.rs  network_manager.rs  service.rs
systemd/: pass-nm-agent.service
