[package]
name = "pass-nm-agent"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = { version = "0.7.6", features = ["dbus-crossroads"] }
env_logger = "0.11.3"
futures = "0.3.30"
itertools = "0.13.0"
log = "0.4.21"
pico-args = "0.5.0"
tokio = { version = "1.36.0", features = ["macros", "time", "rt-multi-thread", "process", "fs", "io-util"] }
